RESOLVED FIXED115475
REGRESSION(r147548): Broken comboboxes
https://bugs.webkit.org/show_bug.cgi?id=115475
Summary REGRESSION(r147548): Broken comboboxes
Sergio Villar Senin
Reported 2013-05-01 07:52:40 PDT
Comboboxes are not working at all in WebKitGtk+, neither for WK1 not WK2. The popup window is not displayed, and the combobox does not even work with the keyboard.
Attachments
Patch (1.62 KB, patch)
2013-05-14 04:01 PDT, Carlos Garcia Campos
gustavo: review+
Carlos Garcia Campos
Comment 1 2013-05-14 03:55:53 PDT
I don't think this is specific to GTK. The problem is that r147548 made the popup to be closed when a blur event is received. Right before showing the popup the input element is focused, so that after the the popup is shown the focus event is emitted and the event handler is called again hiding the popup. I guess this doesn't happen in other platforms because they run a nested mainloop for popups. A possible solution would be to check that the current element has actually lost the focus before hiding the popup.
Carlos Garcia Campos
Comment 2 2013-05-14 04:01:00 PDT
Carlos Garcia Campos
Comment 3 2013-05-14 23:42:06 PDT
Note You need to log in before you can comment on or make changes to this bug.