REGRESSION(r147548): Broken comboboxes https://bugs.webkit.org/show_bug.cgi?id=115475

Reviewed by Gustavo Noronha Silva.

The problem is that r147548 made the popup to be closed when a
blur event is received. Right before showing the popup the input
element is focused, so that after the the popup is shown the focus
event is emitted and the event handler is called again hiding the
popup.

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::menuListDefaultEventHandler): Check
element has lost the focus before closing the popup menu.

Canonical link: https://commits.webkit.org/134534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150102 268f45cc-cd09-0410-ab3c-d52691b4dbfc