Source/WebCore/html/HTMLSelectElement.cpp
@@ -1237,7 +1237,7 @@ void HTMLSelectElement::menuListDefaultEventHandler(Event* event)
         event->setDefaultHandled();
     }
 
-    if (event->type() == eventNames().blurEvent) {
+    if (event->type() == eventNames().blurEvent && !focused()) {
         if (RenderMenuList* menuList = toRenderMenuList(renderer())) {
             if (menuList->popupIsVisible())
                 menuList->hidePopup();
